--- a/inference/config/camera_info.yaml
+++ b/inference/config/camera_info.yaml
@@ -1,4 +1,4 @@
-image_width: 910
+image_width: 512 # default: 910
 image_height: 512
 camera_name: dope_webcam_0
 distortion_model: plumb_bob
@@ -10,7 +10,13 @@ rectification_matrix:
   rows: 3
   cols: 3
   data: [1, 0, 0, 0, 1, 0, 0, 0, 1]
+# projection_matrix:
+#   rows: 3
+#   cols: 4
+#   data: [768.16058349609375, 0, 256, 0, 0, 768.16058349609375, 256, 0, 0, 0, 1, 0]
+
+# Para nuestro caso:
 projection_matrix:
   rows: 3
   cols: 4
-  data: [768.16058349609375, 0, 256, 0, 0, 768.16058349609375, 256, 0, 0, 0, 1, 0]
+  data: [2324.1, 0, 258.9158, 0, 0, 2327.5, 235.9483, 0, 0, 0, 1, 0]
