--- a/inference/config/config_pose.yaml
+++ b/inference/config/config_pose.yaml
@@ -16,7 +16,8 @@ dimensions: {
     "Ketchup" : [ 14.860799789428711, 4.3368000984191895, 6.4513998031616211 ],
     "005_clampconnector": [9.267730712890625,17.625339508056641,4.5134143829345703],
     "05_02_03_04_02_10_connector": [8.75,7.21426,1.625],
-    "001_object1": [8.75,7.21426,1.625]
+    "001_object1": [8.75,7.21426,1.625],
+    "05_02_03_04_02_10_connector_black": [8.75,7.21426,1.625],
 }
 
 class_ids: {
@@ -33,7 +34,8 @@ class_ids: {
     "05_02_03_04_02_10_connector_grey": 12,
     "005_clampconnector": 13,
     "05_02_03_04_02_10_connector": 14,
-    "001_object1": 15
+    "001_object1": 15,
+    "05_02_03_04_02_10_connector_black": 16
 }
 
 draw_colors: {
@@ -50,7 +52,8 @@ draw_colors: {
     "05_02_03_04_02_10_connector_grey": [255, 13, 128],
     "005_clampconnector": [255, 13, 128],
     "05_02_03_04_02_10_connector": [13, 255, 128],
-    "001_object1": [0,0,0]
+    "001_object1": [0,0,0],
+    "05_02_03_04_02_10_connector_black": [255, 13, 128]
 }
 
 # Config params for DOPE
