updates para los experimentos realizados

--- a/inference/config/config_pose.yaml
+++ b/inference/config/config_pose.yaml
@@ -3,7 +3,7 @@ downscale_height: 512      # if the input image is larger than this, scale it do
 
 # Cuboid dimension in cm x,y,z
 dimensions: {
-    "05_02_03_04_02_10_connector_grey": [8.75,7.21426,1.625],
+    # "05_02_03_04_02_10_connector_grey": [8.75,7.21426,1.625],
     "003_cracker_box": [16.403600692749023,21.343700408935547,7.179999828338623],
     "009_gelatin_box": [8.918299674987793, 7.311500072479248, 2.9983000755310059],
     "010_potted_meat_can": [10.164673805236816,8.3542995452880859,5.7600898742675781],
@@ -15,7 +15,7 @@ dimensions: {
     '008_pudding_box':[49.47199821472168, 29.923000335693359, 83.498001098632812],
     "Ketchup" : [ 14.860799789428711, 4.3368000984191895, 6.4513998031616211 ],
     "005_clampconnector": [9.267730712890625,17.625339508056641,4.5134143829345703],
-    "05_02_03_04_02_10_connector": [8.75,7.21426,1.625],
+    # "05_02_03_04_02_10_connector": [8.75,7.21426,1.625],
     "001_object1": [8.75,7.21426,1.625],
     "05_02_03_04_02_10_connector_black": [8.75,7.21426,1.625] # Las dimensiones están bien comprobado en 3D viewer
 }
